# Kotoori-TextEditor

./: .gitignore  README.md  RELEASE_CHECKLIST.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
assets/icons/: icon.icns
electron/: main.ts  preload.ts
electron/history/: HistoryManager.ts
electron/menu/: MenuBar.ts  MenuTemplate.ts
src/: App.css  App.tsx  index.css  index.d.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: file.rs  system.rs
src/components/: BackButton.css  BackButton.tsx  MenuBar.tsx  StatusBar.tsx  ToolBar.tsx
src/components/History/: History.css  HistoryPage.tsx
src/components/MarkdownPreview/: MarkdownPreview.css  MarkdownPreview.tsx
src/components/Outline/: Outline.css  Outline.tsx
src/components/Settings/: Settings.css  SettingsPage.tsx  ThemeCustomizer.css  ThemeCustomizer.tsx
src/hooks/: useEditorSettings.ts  useFileOperations.ts  useTauriWindow.ts  useThemeManagement.ts
src/lib/: history-db.ts  history-manager.ts  tauri-api.ts
src/styles/: MenuBar.css  ToolBar.css
